dhall/tests/type-errors/unit/UnionDeprecatedConstructorsKeyword.txt
 --> 1:1
  |
1 | constructors < Left : Natural | Right : Bool >âŠ
  | ^----------^
  |
  = Type error: Unbound variable
